[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/large_title.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/item_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/prefabs/Searchbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/scenes/create_account/page_create_account.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/font18.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/font48.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/images/Main_Background.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0823529, 0.0823529, 0.0823529, 0.862745 )
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0156863, 0.0156863, 0.0156863, 0.682353 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0862745, 0.0862745, 0.0862745, 0.858824 )

[node name="CreateAccount" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 103.0
margin_top = 17.0
margin_right = 532.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 2 )
text = "Account Creation"
align = 1

[node name="SubPages" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="First" type="Control" parent="SubPages"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel" type="Panel" parent="SubPages/First"]
margin_left = 50.0
margin_top = 619.0
margin_right = 1052.0
margin_bottom = 1056.0
custom_styles/panel = SubResource( 1 )

[node name="UsernameBar" parent="SubPages/First" instance=ExtResource( 3 )]
margin_left = 40.0
margin_top = 773.0
margin_right = 1045.0
margin_bottom = 901.0

[node name="Tip" parent="SubPages/First/UsernameBar/Vertical/Header" index="0"]
text = "New Username"

[node name="Label1" type="Label" parent="SubPages/First"]
margin_left = 217.0
margin_top = 661.0
margin_right = 898.0
margin_bottom = 721.0
custom_fonts/font = ExtResource( 2 )
text = "Hello! What is your username?"

[node name="Next1" type="Button" parent="SubPages/First"]
margin_left = 425.0
margin_top = 940.0
margin_right = 669.0
margin_bottom = 1022.0
custom_fonts/font = ExtResource( 1 )
text = "Next"

[node name="Second" type="Control" parent="SubPages"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1080.0
margin_right = 1080.0

[node name="Panel" type="Panel" parent="SubPages/Second"]
margin_left = 50.0
margin_top = 619.0
margin_right = 1052.0
margin_bottom = 1056.0
custom_styles/panel = SubResource( 1 )

[node name="ShowPassword" type="Button" parent="SubPages/Second"]
margin_left = 926.0
margin_top = 789.0
margin_right = 1018.0
margin_bottom = 854.0
custom_fonts/font = ExtResource( 5 )
text = "Show"

[node name="UsernamePreview" type="Label" parent="SubPages/Second"]
margin_left = 64.0
margin_top = 464.0
margin_right = 1042.0
margin_bottom = 582.0
custom_fonts/font = ExtResource( 6 )
custom_styles/normal = SubResource( 3 )
text = "David12"
align = 1

[node name="PasswordBar" parent="SubPages/Second" instance=ExtResource( 3 )]
margin_left = 91.0
margin_top = 773.0
margin_right = 932.0
margin_bottom = 901.0

[node name="Header" parent="SubPages/Second/PasswordBar/Vertical" index="0"]
margin_right = 841.0

[node name="Tip" parent="SubPages/Second/PasswordBar/Vertical/Header" index="0"]
text = "New Password"

[node name="Text" parent="SubPages/Second/PasswordBar/Vertical/Header" index="1"]
secret = true

[node name="Label1" type="Label" parent="SubPages/Second"]
margin_left = 190.0
margin_top = 671.0
margin_right = 897.0
margin_bottom = 731.0
custom_fonts/font = ExtResource( 2 )
text = "Now type in your new password"

[node name="Confirm" type="Button" parent="SubPages/Second"]
margin_left = 425.0
margin_top = 940.0
margin_right = 669.0
margin_bottom = 1022.0
custom_fonts/font = ExtResource( 1 )
text = "Confirm"

[node name="Return" type="Button" parent="."]
margin_left = 20.0
margin_top = 26.0
margin_right = 332.0
margin_bottom = 150.0
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "Return"

[connection signal="visibility_changed" from="." to="." method="_on_CreateAccount_visibility_changed"]
[connection signal="pressed" from="SubPages/First/Next1" to="." method="_on_Next1_pressed"]
[connection signal="pressed" from="SubPages/Second/ShowPassword" to="." method="_on_ShowPassword_pressed"]
[connection signal="pressed" from="SubPages/Second/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Return" to="." method="_on_Return_pressed"]

[editable path="SubPages/First/UsernameBar"]
[editable path="SubPages/Second/PasswordBar"]
